--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_switch: ^0.3.2
   font_awesome_flutter: ^9.2.0
+  assets_audio_player: ^3.0.3+9
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+
+    - audio/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
