--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_switch: ^0.3.2
   font_awesome_flutter: ^9.2.0
   assets_audio_player: ^3.0.3+9
+  fl_chart: ^0.40.6
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
